--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,13 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@theme {
+  --font-poppins: Poppins, sans-serif;
+  --color-kodegiri-light-green: #CBEAE2;
+  --color-kodegiri-yellow: #F9CE1D;
+  --color-kodegiri-lime-green: #D4E496;
+  --color-kodegiri-dark-green: #1F5E19;
+  --color-kodegiri-medium-green: #049624;
+  --color-kodegiri-brown: #B28966;
+  --color-kodegiri-black: #1F1F1F;
+  --color-kodegiri-white: #F9F9F9;
 }
